# uScript

./: .gitignore  CMakeLists.txt  LANGUAGE_REFERENCE.md  LANGUAGE_TUTORIAL.md  README.md  Reorganization.md  TODO.txt  build.sh
sources/implementation/libs/Drivers/ftdi245/: CMakeLists.txt
sources/implementation/libs/Drivers/uart/: CMakeLists.txt
sources/implementation/libs/Utils/uUartMonitor/: CMakeLists.txt
sources/implementation/plugins/buspirate_plugin/: CMakeLists.txt
sources/implementation/plugins/buspirate_plugin/inc/: bithandling.h  buspirate_generic.hpp  buspirate_plugin.hpp
sources/implementation/plugins/buspirate_plugin/src/: buspirate_generic.cpp  buspirate_i2c.cpp  buspirate_mode.cpp  buspirate_onewire.cpp  buspirate_plugin.cpp  buspirate_rawwire.cpp  buspirate_spi.cpp  buspirate_uart.cpp
sources/implementation/plugins/shell_plugin/shell_plugin/: CMakeLists.txt
sources/implementation/plugins/uartmon_plugin/: CMakeLists.txt
sources/implementation/plugins/uartmon_plugin/inc/: uartmon_plugin.hpp
sources/implementation/plugins/uartmon_plugin/src/: uartmon_plugin.cpp
sources/implementation/plugins/utils_plugin/: CMakeLists.txt
sources/implementation/plugins/utils_plugin/inc/: utils_plugin.hpp
sources/implementation/plugins/utils_plugin/src/: utils_plugin.cpp
sources/implementation/script/shared/ScriptReader/: CMakeLists.txt
sources/implementation/test/validator/: CMakeLists.txt
sources/implementation/test/validator/inc/: CommScriptValidatorTest.hpp
sources/implementation/test/validator/src/: test_validator_main.cpp
sources/include/script/comm/: CMakeLists.txt
sources/include/script/comm/inc/: ICommScriptCommandInterpreter.hpp  ICommScriptInterpreter.hpp  ICommScriptItemInterpreter.hpp
sources/src/app/: CMakeLists.txt
sources/src/app/src/: ScriptMainApp.cpp  uScriptMainApp.cpp
sources/src/lib/drivers/ch347/: CMakeLists.txt
sources/src/lib/drivers/cp2112/: CMakeLists.txt
sources/src/lib/drivers/ftdi2232h/: CMakeLists.txt
sources/src/lib/plugin_ops/: CMakeLists.txt
sources/src/lib/plugin_ops/inc/: PluginOperations.hpp  PluginSpecOperations.hpp
sources/src/plugin/: CMakeLists.txt  create_plugin.sh
sources/src/plugin/buspirate_plugin/: CMakeLists.txt  README.md
sources/src/plugin/buspirate_plugin/docs/: I2C_scanning.md
sources/src/plugin/buspirate_plugin/inc/: buspirate_generic.hpp  buspirate_plugin.hpp
sources/src/plugin/buspirate_plugin/src/: buspirate_generic.cpp  buspirate_i2c.cpp  buspirate_mode.cpp  buspirate_onewire.cpp  buspirate_plugin.cpp  buspirate_rawwire.cpp  buspirate_spi.cpp  buspirate_uart.cpp
sources/src/plugin/ch347_plugin/: CMakeLists.txt  README.md
sources/src/plugin/ch347_plugin/docs/: README.md
sources/src/plugin/ch347_plugin/inc/: ch347_generic.hpp  ch347_plugin.hpp
sources/src/plugin/ch347_plugin/src/: ch347_gpio.cpp  ch347_i2c.cpp  ch347_jtag.cpp  ch347_plugin.cpp  ch347_spi.cpp
sources/src/plugin/core_plugin/: CMakeLists.txt
sources/src/plugin/core_plugin/docs/: README.md
sources/src/plugin/core_plugin/inc/: core_plugin.hpp
sources/src/plugin/core_plugin/src/: core_plugin.cpp
sources/src/plugin/cp2112_plugin/: CMakeLists.txt
sources/src/plugin/cp2112_plugin/docs/: README.md
sources/src/plugin/cp2112_plugin/inc/: cp2112_generic.hpp  cp2112_plugin.hpp
sources/src/plugin/cp2112_plugin/src/: cp2112_gpio.cpp  cp2112_i2c.cpp  cp2112_plugin.cpp
sources/src/plugin/ftdi2232_plugin/: CMakeLists (copy 1).txt  CMakeLists.txt
sources/src/plugin/ftdi2232_plugin/docs/: README.md
sources/src/plugin/ftdi2232_plugin/inc/: ft2232_generic.hpp  ft2232_plugin.hpp
sources/src/plugin/ftdi2232_plugin/src/: ft2232_gpio.cpp  ft2232_i2c.cpp  ft2232_plugin.cpp  ft2232_spi.cpp  ft2232_uart.cpp
sources/src/plugin/ftdi232h_plugin/: CMakeLists.txt  README.md
sources/src/plugin/ftdi232h_plugin/docs/: README.md
sources/src/plugin/ftdi232h_plugin/inc/: ft232h_generic.hpp  ft232h_plugin.hpp
sources/src/plugin/ftdi232h_plugin/src/: ft232h_gpio.cpp  ft232h_i2c.cpp  ft232h_plugin.cpp  ft232h_spi.cpp  ft232h_uart.cpp
sources/src/plugin/ftdi245_plugin/: CMakeLists.txt  README.md
sources/src/plugin/ftdi245_plugin/docs/: README.md
sources/src/plugin/ftdi245_plugin/inc/: ft245_generic.hpp  ft245_plugin.hpp
sources/src/plugin/ftdi245_plugin/src/: ft245_fifo.cpp  ft245_gpio.cpp  ft245_plugin.cpp
sources/src/plugin/ftdi4232_plugin/: CMakeLists.txt
sources/src/plugin/ftdi4232_plugin/docs/: README.md
sources/src/plugin/ftdi4232_plugin/inc/: ft4232_generic.hpp  ft4232_plugin.hpp
sources/src/plugin/ftdi4232_plugin/src/: ft4232_gpio.cpp  ft4232_i2c.cpp  ft4232_plugin.cpp  ft4232_spi.cpp  ft4232_uart.cpp
sources/src/plugin/hydrabus_plugin/: CMakeLists.txt
sources/src/plugin/hydrabus_plugin/docs/: README.md
sources/src/plugin/hydrabus_plugin/inc/: hydrabus_generic.hpp  hydrabus_plugin.hpp
sources/src/plugin/hydrabus_plugin/src/: hydrabus_i2c.cpp  hydrabus_mmc.cpp  hydrabus_nfc.cpp  hydrabus_onewire.cpp  (+7 more)
sources/src/plugin/plugins/: CMakeLists.txt  create_plugin.sh
sources/src/plugin/relaybox_plugin/: CMakeLists.txt
sources/src/plugin/shell_plugin/: CMakeLists.txt
sources/src/plugin/template_plugin/: CMakeLists.txt
sources/src/plugin/uart_plugin/: CMakeLists.txt
sources/src/plugin/uartmon_plugin/: CMakeLists.txt
sources/src/plugin/utils/: CMakeLists.txt
sources/src/plugin/utils_plugin/: CMakeLists.txt
sources/src/script/ItemValidator/: CMakeLists.txt
sources/src/script/ScriptInterpreter/: CMakeLists.txt
sources/src/script/ScriptReader/: CMakeLists.txt
sources/src/script/ScriptValidator/: CMakeLists.txt
sources/src/scriptgui/: CMakeLists.txt  build.sh
sources/src/scriptgui/src/: AppStyle.hpp  CommScriptHighlighter.cpp  CommScriptHighlighter.hpp  IniHighlighter.cpp  IniHighlighter.hpp  LogViewer.cpp  LogViewer.hpp  MainWindow.cpp  MainWindow.hpp  ScriptHighlighter.cpp  ScriptHighlighter.hpp  ScriptHighlighterBase.cpp  ScriptHighlighterBase.hpp  ScriptViewer.cpp  ScriptViewer.hpp  ShellTerminal.cpp  ShellTerminal.hpp  StatusLed.cpp  StatusLed.hpp  main.cpp
(+616 files in other folders)
