cmake_minimum_required(VERSION 3.16)
add_subdirectory(buspirate_plugin)
add_subdirectory(ch347_plugin)
add_subdirectory(core_plugin)
add_subdirectory(cp2112_plugin)
add_subdirectory(ftdi2232_plugin)
add_subdirectory(ftdi232h_plugin)
add_subdirectory(ftdi245_plugin)
add_subdirectory(ftdi4232_plugin)
add_subdirectory(hydrabus_plugin)
add_subdirectory(shell_plugin)
add_subdirectory(template_plugin)
add_subdirectory(uart_plugin)
add_subdirectory(uartmon_plugin)



